<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_PMPS" Id="{0a30ac61-9bef-4090-bb2e-0e508084f744}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    g_FastFaultOutput1  :   FB_HardwareFFOutput;	//FFO for Upstream Components
	g_fbArbiter1: FB_Arbiter(1);
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>